      in the new cluster with data from the old cluster. Abort with an error
      if the installed pg_restore does not support this option.
    - debian/postgresql-common.dirs: Ship
      /etc/postgresql-common/pg_upgradecluster.d/.
  * Add t/120_pg_upgradecluster_scripts.t: Selftest for pg_upgradecluster.d
    hooks and proper pg_restore -X no-data-for-failed-tables behaviour.

 -- Martin Pitt <mpitt@debian.org>  Sun, 23 Jul 2006 17:46:18 +0200

postgresql-common (57) unstable; urgency=low

  * debian/postgresql-common.{preinst,config}: Check if there is a removed,
    but not purged pre-transition postgresql-client or postgresql package.
    Packages in this state subtly break operation, but are not caught by the
    Conflicts: statements. Display a critical note in that case and abort
    installation. Closes: #368827

 -- Martin Pitt <mpitt@debian.org>  Thu, 29 Jun 2006 23:07:30 +0200

postgresql-common (56) unstable; urgency=low

  * debian/init.d-functions, status(): Exit with code 3 if any cluster is
    down, to get a bit closer to LSB specification (which does not
    sufficiently specify the case of controlling multiple processes in one
    init script). Thanks to Ross Boylan <RossBoylan@stanfordalumni.org>!
    Closes: #358152
  * pg_ctlcluster:
    - start: Create an external PID file /var/run/postgresql/
      <version>-<cluster>.pid for 8.0+ versions (7.4 doesn't support this yet)
      unless 'external_pid_file' is already set in postgresql.conf.
      Closes: #180849, #184782
    - stop: Remove this external pid file (this should be done by the
      postmaster itself, but 8.1.4 does not).
  * t/020_create_sql_remove.t: Check that starting a cluster creates a PID
    file in /var/run/postgresql/, but doesn't if external_pid_file was set
    explicitly.
  * t/030_errors.t: Adapt to new PID file creation behaviour.
  * t/030_errors.t: modprobe loop before setting up the test loopback device.
  * debian/supported-versions: Add Ubuntu 6.10.
