@@ -23,8 +23,11 @@ postgresql-common (58) unstable; urgency=low
       /etc/postgresql-common/pg_upgradecluster.d/.
   * Add t/120_pg_upgradecluster_scripts.t: Selftest for pg_upgradecluster.d
     hooks and proper pg_restore -X no-data-for-failed-tables behaviour.
+  * PgCommon.pm, get_cluster_locales(): Fix parsing of locales out of
+    pg_controldata output by calling it under the locale 'C' and being more
+    liberal in the regular expression. (https://launchpad.net/bugs/50755)
 
- -- Martin Pitt <mpitt@debian.org>  Sun, 23 Jul 2006 17:46:18 +0200
+ -- Martin Pitt <mpitt@debian.org>  Tue, 25 Jul 2006 22:34:42 +0200
 
 postgresql-common (57) unstable; urgency=low
 
